# synheart-open-mvp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: api.md  overview.md  schema.md
examples/emotion_demo_app/: README.md  index.html  package-lock.json  package.json
examples/emotion_demo_app/src/: App.tsx
examples/emotion_demo_app/src/components/: SignalCard.tsx
schemas/: ingest-batch.sample.json  ingest-batch.schema.json  ingest.sample.csv  ingest.sample.jsonl
sdk/js/: README.md  package-lock.json  package.json
sdk/js/examples/: quickstart.mjs
sdk/js/src/: index.ts
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: quickstart.py
sdk/python/src/synheart/: client.py
sdk/python/src/synheart.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/api/: README.md  pyproject.toml
services/api/app/: main.py  schemas.py
services/api/synheart_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
